--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lenis": "^1.3.17",
+    "libphonenumber-js": "^1.12.36",
     "lucide-react": "^0.563.0",
     "motion": "^12.33.0",
     "radix-ui": "^1.4.3",
